# docmarx

./: .editorconfig  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  vulnerability.tmpl
.github/workflows/: ci.yml
cpp/dangerous-functions/: index.html
cpp/header-de-remediaciones/: index.html
cpp/information-exposure-through-comments/: index.html
cpp/memory-leak/: index.html
cpp/unchecked-return-value/: index.html
cpp/use-of-obsolete-functions/: index.html
cpp/use-of-sizeof-on-a-pointer-type/: index.html
docs/: index.md
docs/c/: dangerous-functions.md
docs/cpp/: dangerous-functions.md  header-de-remediaciones.md  information-exposure-through-comments.md  memory-leak.md  unchecked-return-value.md  use-of-obsolete-functions.md  use-of-sizeof-on-a-pointer-type.md
docs/js/: client-dom-open-redirect.md  client-dom-stored-xss.md  client-jquery-deprecated-symbols.md  client-potential-xss.md
docs/php/: client-privacy-violation.md  deprecated-functions.md  error-messages-misconfiguration.md  improper-exception-handling.md  information-exposure-through-an-error-message.md  insufficient-sanitization-for-xss.md  log-forging.md  missing-framing-policy.md  potential-clickjacking-on-legacy-browsers.md  reflected-xss.md  session-fixation.md  ssrf.md  trust-boundary-violation-in-session-variables.md  unchecked-input-for-loop-condition.md
docs/stylesheets/: extra.css
overrides/: main.html
php/ssrf/: index.html
scripts/: docx.py
search/: search_index.json
stylesheets/: extra.css
(+18 files in other folders)
