[project]
name = "docmarx"
version = "1.0.0"
description = "Documentación de vulnerabilidades mitigadas reportadas por Checkmarx."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.5.49",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

[tool.ruff.lint]
extend-select = ["I"]

[project.scripts]
docx = "scripts.docx:cli"

[tool.flit.module]
name = "scripts"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
